--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,7 @@
 body > * {
   font-family: 'Lato', sans-serif;
+  text-align: center;
+  box-sizing: border-box
 }
 
 nav {
@@ -26,4 +28,61 @@ nav {
 
 header {
   margin: 0 auto;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+h1 {
+  margin: 20px 0;
+}
+
+input {
+  width: 275px;
+  padding: 5px;
+}
+
+button {
+  margin: 15px 0;
+  padding: 0 20px;
+  font-weight: 900;
+  text-transform: uppercase;
+  border-radius: 2px;
+  background: transparent;
+  max-width: 150px;
+  width: 100%;
+  height: 30px;
+  border: 0;
+  background-color: #f1c40f;
+  cursor: pointer;
+}
+
+.fas {
+  color: darkorange;
+  display: inline-block;
+  font-size: 40px;
+}
+
+.main {
+  width: 1000px;
+  font-family: 'Lato', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 125px;
+    width: 80vw;
+    padding: 5px;
+    margin: 0 auto;
+}
+
+.main div {
+    padding: 30px 0;
+}
+
+.main i {
+  float: left;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: 700;
 }
